# gimp

./: .cvsignore  ChangeLog  acconfig.h  autogen.sh  config.h.in  configure.ac  configure.in  gimp.m4  gimprc.in  gimprc_user.in  ltconfig  ltmain.sh  user_install  user_install.in
app/: Makefile.am  about_dialog.c  airbrush.c  app.c  app_procs.c  app_procs.h  base_frame_manager.c  base_frame_manager.h  batch.c  bezier_select.c  blend.c  boundary.c  boundary_decl.h  brightness_contrast.c  brush_edit.c  brush_select.c  brush_select.h  brushes.c  bucket_fill.c  by_color_select.c  canvas.c  canvas.h  channel.c  channel.h  channel_cmds.c  channel_decl.h  channel_ops.c  channel_pvt.h  channels_dialog.c  clone.c  clone.h  color_area.c  color_balance.c  color_picker.c  color_select.c  colormaps.c  colormaps.h  commands.c  commands.h  convert.c  (+174 more)
app/actions/: Makefile.am  actions.c  help-commands.c  unified-transform-tool-actions.c  unified-transform-tool-actions.h  unified-transform-tool-commands.c  unified-transform-tool-commands.h
app/base/: boundary.h  pixel-region.h  tile.h
app/core/: gimp-edit.c  gimp-utils.c  gimpbrush-header.h  gimpbrush-load.c  gimpbrush.h  gimpbrushgenerated-save.c  gimpchannel-combine.c  gimpchannel-combine.h  gimpchannel.c  gimpchannel.h  gimpdrawable-blend.c  gimpdrawable-equalize.c  gimpedit.c  gimpimage-convert.c  gimpimage-convert.h  gimpimage-duplicate.c  gimpimage-merge.h  gimpimage-projection.c  gimpimage-undo-push.c  gimpimage.c  gimpimage.h  gimpimagemap.c  gimpimagemap.h  gimpitem.c  gimplayer-floating-sel.c  gimplayer.c  gimplayer.h  gimpobject.h  gimpprojection-construct.c  gimpprojection-construct.h  gimpprojection.c  gimpprojection.h  gimpviewable.c
app/dialogs/: about-dialog.c  info-window.c  preferences-dialog.c  resolution-calibrate-dialog.c
app/display/: gimpdisplay-callbacks.h  gimpdisplay-ops.c  gimpdisplay-render.c  gimpdisplay.c  gimpdisplay.h  gimpdisplayshell-callbacks.c  gimpdisplayshell-draw.c  gimpdisplayshell-layer-select.c  gimpdisplayshell-render.c  gimpdisplayshell-scale.c  gimpdisplayshell-scroll.c  gimpdisplayshell-tool-events.c  gimpdisplayshell.c  gimpmultiwindowstrategy.c
app/gegl/: Makefile.am  gimp-gegl-enums.c  gimp-gegl-enums.h  gimp-gegl-types.h  gimp-gegl.c  gimpoperationfindoutline.c  gimpoperationfindoutline.h  gimpoperationseamlessclone.c  gimpoperationseamlessclone.h  gimpoperationwarp.c  gimpoperationwarp.h
app/gui/: channels-dialog.c  color-select.c  commands.c  gradient-editor.c  gui.c  help-commands.c  help-commands.h  layer-select.c  layers-dialog.c  palette-editor.c  splash.c
app/menus/: menus.c
app/operations/: Makefile.am  gimp-operations.c  operations-types.h
app/paint/: Makefile.am  gimp-paint.c  gimpairbrush.c  gimpbrushcore.c  gimpclone.c  gimpdodgeburn.c  gimperaser.c  gimpheal.c  gimpheal.h  gimphealoptions.c  gimphealoptions.h  gimpperspectiveclone.c  gimpperspectiveclone.h  gimpperspectivecloneoptions.c  gimpperspectivecloneoptions.h  gimpsmudge.c  gimpsourcecore.c  makefile.msc  paint-enums.c  paint-enums.h
app/pdb/: image-cmds.c  internal_procs.c  paint_tools_cmds.c
app/plug-in/: gimppluginmanager-run.c  plug-in-message.c  plug-ins.h
app/propgui/: gimppropgui-utils.c
app/tools/: Makefile.am  backwards.xpm  backwards_is.xpm  bezier_select.c  brightness_contrast.c  bucket_fill.c  by_color_select.c  clone.h  convolve.c  eraser.c  forward.xpm  forward_is.xpm  free_select.c  fuzzy_select.c  gimp-tools.c  gimpblendtool.c  gimpclonetool.c  gimpcroptool.c  gimpcurvestool.c  gimpellipseselecttool.c  gimpforegroundselecttool.c  gimpfuzzyselecttool.h  gimpgegltool.c  gimpgradienttool-editor.c  gimphealtool.c  gimpiscissorstool.c  gimplevelstool.c  gimppaintoptions-gui.c  gimppenciltool.c  gimpperspectiveclonetool.c  gimpperspectiveclonetool.h  gimprectselecttool.c  gimprotatetool.c  gimpseamlesscloneoptions.c  gimpseamlesscloneoptions.h  gimpseamlessclonetool.c  gimpseamlessclonetool.h  gimptransformtool.c  gimpunifiedtransformtool.c  gimpunifiedtransformtool.h  (+17 more)
app/widgets/: gimpbrusheditor.c  gimpcontainerbox.c  gimpcriticaldialog.c  gimpcursor.c  gimpdashboard.c  gimpdeviceinfo.c  gimpdevicemanager.c  gimpdevices.c  gimpdevicestatus.c  gimpdialogfactory.c  gimphelp-ids.h  gimphistogrameditor.c  gimphistogramview.c  gimpitemfactory.c  gimpprefsbox.c  gimpspinscale.c
app/xcf/: xcf-load.c  xcf-save.c  xcf.c
cursors/: Makefile.am  makefile.msc
data/misc/: user_install
docs/: gtkob.txt
icons/: Makefile.am
libgimp/: .cvsignore  Makefile.am  gimp.c  gimp.def  gimp.h  gimpdisplay.c  gimpdisplay_pdb.c  gimpdrawable.c  gimpenums.h  gimpimage.c  gimpimage_pdb.c  gimpimage_pdb.h  gimppainttools_pdb.c  gimpwire.c
libgimpbase/: gimpbaseenums.h
libgimpcolor/: gimpcolorspace.c
libgimpwidgets/: gimpstock.c  gimpstock.h
menus/: Makefile.am  image-menu.xml.in  unified-transform-tool-menu.xml
plug-ins/: Makefile.am
plug-ins/blur/: blur.c
plug-ins/bz2/: .cvsignore
plug-ins/common/: .gitignore  Makefile.am  curve-bend.c  gimprc.common  plugin-defs.pl  sample-colorize.c
plug-ins/compose/: compose.c
plug-ins/dbbrowser/: .cvsignore
plug-ins/decompose/: .cvsignore  Makefile.am  decompose.c
plug-ins/edge/: .cvsignore  edge.c
plug-ins/file-psd/: psd-load.c
plug-ins/fm_pts/: Makefile.am  RH_FileComboSB.h  RH_FileComboSB.uil  RH_FileDialog.c  RH_FileDialog.h  RH_FileSB.c  RH_FileSB.h  RH_FileSB.uil  bxutils-vk.c  fm_pts.c  fm_pts.h  fm_pts.uil  main-vk.c  main-vk.h
plug-ins/fm_pts/ii_files/: RH_FileComboSB.ii  RH_FileDialog.ii  RH_FileSB.ii  main-vk.ii
plug-ins/fur/: .cvsignore  Makefile.am  fur.c
plug-ins/gbr/: gbr.c  (+1 more)
plug-ins/parsley/: Makefile.am  parsley.c  parsley.h  parsley_enums.h
plug-ins/parsley/ii_files/: parsley.ii
plug-ins/parsley/scripts/: crop.psh  loadNext.psh  quarter.psh
plug-ins/pts/: Makefile.am  RH_FileComboSB.c  RH_FileDialog.c  pts.c  pts.h
plug-ins/pts/ii_files/: RH_FileComboSB.ii  RH_FileDialog.ii  RH_FileSB.ii  main-vk.ii
plug-ins/rll/: Makefile.am  rll.c
plug-ins/rll/.deps/: rll.P
po/: POTFILES.in
po-plug-ins/: POTFILES.in
(+38 files in other folders)
